<resources>
    <string name="app_name">ClockWidget</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="cancel">取消</string>
    <string name="title">请选择时间</string>
    <string name="confirm">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <string name="select_timeformat">选择时间格式</string>
    <string name="current_timeformat">当前时间格式</string>
    <string name="select_fontcolor">选择字体颜色</string>
    <string name="current_fontcolor">当前字体颜色</string>
    <string name="fontcolor">黑</string>
    <string name="select_fontsize">选择字体大小</string>
    <string name="current_fontsize">当前字体大小</string>
    <string name="select_clockstyle">选择时钟样式</string>
    <string name="current_clockstyle">当前时钟样式</string>
</resources>
