<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_bg"
    android:orientation="vertical"
    tools:ignore="RtlSymmetry">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:paddingLeft="0dp"
        android:text="@string/select_timeformat"
        android:textColor="@color/select_title_text"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/ll_timeformat"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/current_time_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="0dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:text="@string/current_timeformat"
            android:textColor="@color/current_time_text"
            android:textSize="15sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_selected_timeformat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="0dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:textColor="@color/selected_time_text"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:paddingLeft="0dp"
        android:text="@string/select_fontcolor"
        android:textColor="@color/select_title_text"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/ll_fontcolor"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/current_time_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="0dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:text="@string/current_fontcolor"
            android:textColor="@color/current_time_text"
            android:textSize="15sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_selected_color"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="0dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:textColor="@color/selected_time_text"
            android:text="@string/fontcolor"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:paddingLeft="0dp"
        android:text="@string/select_fontsize"
        android:textColor="@color/select_title_text"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/ll_fontsize"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/current_time_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="0dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:text="@string/current_fontsize"
            android:textColor="@color/current_time_text"
            android:textSize="15sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_selected_size"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="0dp"
            android:text="40dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:textColor="@color/selected_time_text"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:paddingLeft="0dp"
        android:text="@string/select_clockstyle"
        android:textColor="@color/select_title_text"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/ll_clockstyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/current_time_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="0dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:text="@string/current_clockstyle"
            android:textColor="@color/current_time_text"
            android:textSize="15sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_selected_clockstyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="0dp"
            android:text="数字时钟"
            android:background="@null"
            android:gravity="center_vertical"
            android:textColor="@color/selected_time_text"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:paddingLeft="0dp"
        android:text="@string/select_timezones"
        android:textColor="@color/select_title_text"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/ll_timezones"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/current_time_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="0dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:text="@string/current_timezones"
            android:textColor="@color/current_time_text"
            android:textSize="15sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_selected_timezone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="0dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:textColor="@color/selected_time_text"
            android:textSize="15sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_festival"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/current_time_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="0dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:text="@string/festival_reminder"
            android:textColor="@color/current_time_text"
            android:textSize="15sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <com.suke.widget.SwitchButton
            android:id="@+id/festival_button"
            android:layout_width="80dp"
            android:layout_height="40dp"/>


    </LinearLayout>
</LinearLayout>